--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>my first ever website.</h1>
     <p>Felling happy now</p>
     <p>I am a ghost. </p>
+    <p>i am a nill pori, lal jin.</p>
+    <input type="text" name="" id="">
+    <br>
+    <button>Click me baby!!!</button>
 </body>
 </html>
